build_log_utf8.txt
Processing JC8048W550C (platform: espressif32; board: JC8048W550C; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/JC8048W550C.html
PLATFORM: Espressif 32 (6.13.0) > JC8048W550C
HARDWARE: ESP32S3 240MHz, 320KB RAM, 16MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.41100.0 (4.11.0) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 37 compatible libraries
Scanning dependencies...
Dependency Graph
|-- esp32_smartdisplay @ 2.1.1+sha.549518a
|-- ArduinoJson @ 7.4.3
|-- lvgl @ 9.2.2
|-- HTTPClient @ 2.0.0
|-- WiFi @ 2.0.0
|-- HTTPUpdate @ 2.0.0
|-- Preferences @ 2.0.0
Building in debug mode
Compiling .pio\build\JC8048W550C\src\api_client.cpp.o
C:\Users\morte\.platformio\penv\Scripts\pio.exe : src/api_client.cpp: In function 'bool fetchTapDisplay(TapData&)':
At line:1 char:1
+ C:\Users\morte\.platformio\penv\Scripts\pio.exe run > build_log.txt 2 ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (src/api_client....lay(TapData&)'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
src/api_client.cpp:89:53: error: 'KEG_ID' was not declared in this scope
     strlcpy(out.kegId,          doc["keg_id"]     | KEG_ID, sizeof(out.kegId));
                                                     ^~~~~~
src/api_client.cpp:89:53: note: suggested alternative: 'TAP_ID'
     strlcpy(out.kegId,          doc["keg_id"]     | KEG_ID, sizeof(out.kegId));
                                                     ^~~~~~
                                                     TAP_ID
Archiving .pio\build\JC8048W550C\lib361\libSD.a
*** [.pio\build\JC8048W550C\src\api_client.cpp.o] Error 1
========================== [FAILED] Took 7.76 seconds ==========================

